--- a/serial.html
+++ b/serial.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
-  <style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
@@ -69,48 +68,28 @@ img {vertical-align: middle;}
 </style>
 </head>
 <body>
-  <div class="main">
-  	 <div class="header">
-  	 	<div class="aj">
-  	 		<img src="https://seeklogo.com/images/K/kino-logo-517DBDC3FA-seeklogo.com.png" class="logo"	>
-  	 	</div>
-  	 	<a href="sign.html" class="a2">Log In</a>
-  	 </div><br>
-  	 <div class="group1">
-  	 	<a href="serial.html" class="aaa">Serialner</a>
-  	 	<a href="#"class="aaa">Filmer</a>
-  	 	<a href="#"class="aaa">Multer</a>
-  	 	<a href="#"class="aaa">Komedia</a>
-  	 	<a href="#"class="aaa">Horror</a>
-  	 	<a href="#"class="aaa">Arkasayin</a>
-  	 	<a href="#"class="aaa">Fantastic</a>
-  	 	<a href="#"class="aaa">Kriminal</a>
-  	 	<a href="#"class="aaa">Serialner</a>
-  	 	
-      
 
-  	 </div><br>
+<h2>Automatic Slideshow</h2>
+<p>Change image every 2 seconds:</p>
 
-
-
-    <div class="slideshow-container">
+<div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext"></div>
+  <div class="numbertext">1 / 3</div>
   <img src="https://www.armkino.am/images/uploads/depi-chambar-to-the-camp-2-602d5a83c0348.jpg" style="width:100%">
-  <div class="text"></div>
+  <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext"></div>
+  <div class="numbertext">2 / 3</div>
   <img src="https://www.armkino.am/images/uploads/fake-papa-60491c3a75651.jpg" style="width:100%">
-  <div class="text"></div>
+  <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext"></div>
+  <div class="numbertext">3 / 3</div>
   <img src="https://www.armkino.am/images/uploads/hars-chka-2-60491c89982fc.jpg" style="width:100%">
-  <div class="text"></div>
+  <div class="text">Caption Three</div>
 </div>
 
 </div>
@@ -144,33 +123,5 @@ function showSlides() {
 }
 </script>
 
-
-
-
-
-
-    <div>
-    	<h2 class="qw">Armenian film</h2>
-    </div>
-
-
-
-
-    <div class="products">
-    	<a href="1.html">
-    	<img src="https://img.youtube.com/vi/dZr-sxp2Cxg/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    	<a href="2.html">
-    	<img src="https://img.youtube.com/vi/MCgI3Maw6OM/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    	<a href="3.html">
-
-    	<img src="https://img.youtube.com/vi/LA6BX1mQ6bw/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    	<a href="4.html">
-    	<img src="https://img.youtube.com/vi/OV_uARS9bYQ/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    	<a href="5.html">
-    	<img src="https://img.youtube.com/vi/64zZAWXw0pM/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    	<a href="6.html">
-    	<img src="https://img.youtube.com/vi/wrfxrcWV77U/mqdefault.jpg" class="com" alt="Ми ангам дпроцум" draggable="false"></a>
-    </div>
-  </div>		
 </body>
-</html>
+</html> 
