--- a/sign.html
+++ b/sign.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
 </head>
-<body>
+<body style="background-image: url(https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials-hero.jpg);">
 	<div class="main">
 
 
@@ -17,11 +17,10 @@
       		<input type="password" placeholder="Password">
       	</div>
       	<div class="inputBox">
-      		<input type="submit"  id="btn" value="login">
+      		<input type="submit"  id="btn" value="login" >
       	</div>
       	<div class="group">
-      		<a href="#" class="a">Forget password</a><br>
-      		<a href="#" class="a1">Sign up</a><br>
+      		
       		
       	</div>
 
@@ -35,7 +34,7 @@
 
 
       </div><br><br>
-      <a href="index.html" class="aa">Cancel</a>
+      <a href="index.html" style="padding: 10px; background-color: white; text-decoration: none; color: black; margin-left: 600px;">Cancel</a>
 
 
 
